EFK-project/kibana/kibana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress87 # 수정
  namespace: kube-logging
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:963897741994:certificate/b8e82170-53ce-4e70-92d5-6d4339ca8df4 # 그대로 사용
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    external-dns.alpha.kubernetes.io/hostname: kibanadashboard.ihp001.dev # 각 서비스에 맞게 수정
spec:
  rules:
    - host: kibanadashboard.ihp001.dev # 각 서비스에 맞게 수정
      http:
        paths:
          - path: /
            pathType: Prefix
            backend: 
              service: 
                name: ssl-redirect
                port: 
                  name: use-annotation
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: kibana-svc # 수정
                port: 
                  number: 80 # 수정
